xml_schema/tests/xml_schema/nistData/list/negativeInteger/Schema+Instance/jaxb/list-negativeinteger-length-NISTXML-SV-IV-list-negativeInteger-length-1-1.jbx
<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018, 2020 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<java version="1.6.0" class="java.beans.XMLDecoder">
 <object class="jakarta.xml.bind.JAXBElement">
  <object class="javax.xml.namespace.QName"> 
   <string>NISTSchema-SV-IV-list-negativeInteger-length-1-NS</string> 
   <string>NISTSchema-SV-IV-list-negativeInteger-length-1</string> 
  </object> 
  <class>java.util.List</class> 
  <class>jakarta.xml.bind.JAXBElement$GlobalScope</class>
  <object class="java.util.ArrayList"> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-956471263216127371</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-938354626252522452</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-966832423744166424</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-944867767165226631</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-952663747452582166</string> 
    </object> 
   </void> 
  </object> 
 </object> 
</java> 
